--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -1,5 +1,5 @@
 <ng-template #openNewOrderTemplate>
-  <app-order-pre [selectedTable]="selectedTable" (close)="closeModal()" class="clasedeprueba"></app-order-pre>
+  <app-order-pre [selectedTable]="selectedTable" [clients]="clients" (close)="closeModal()" class="clasedeprueba"></app-order-pre>
 </ng-template>
 
 <ng-template #deleteTemplate>
