Abm permisos y roles de usuario. Traducciones

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -409,3 +409,11 @@ font-family: 'Spinnaker', sans-serif;
 background-color:#718239 !important;
 border-radius:20px;
 }
+
+.nonStyleList {
+  list-style: none;
+}
+
+.verticalScroll {
+  overflow-y: scroll;
+}
