--- a/src/app/select-item/select-item.component.html
+++ b/src/app/select-item/select-item.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center pt-5">
   <h5>
-    <i class='fa fa-chevron-left'></i>   {{ text }}
+    <i class='fa fa-chevron-left'></i>{{ 'Commons.selectItem' | translate }}
   </h5>
 </div>
