--- a/src/app/product/product-modify/product-modify.component.html
+++ b/src/app/product/product-modify/product-modify.component.html
@@ -109,7 +109,7 @@
             <mdb-checkbox formControlName="available"> {{ checkboxAvailableText }}</mdb-checkbox>
           </div>
 
-          <div class="row">
+          <div class="row" *ngIf="enableStock"> 
             <div class="col-md-4 col-lg-4">
               <div class="md-form">
                 <mdb-checkbox formControlName="stockControl"> {{ stockControlText }}</mdb-checkbox>
