Se agrego modal que pide pin de usuario para abrir un pedido

--- a/src/app/order/order-pre/order-pre.component.html
+++ b/src/app/order/order-pre/order-pre.component.html
@@ -5,16 +5,11 @@
     </div>
   </div>
   <div class="customOpenOrderContent">
-    <div class="row" id="firstRow">
+    <div class="row mb-3" id="firstRow">
       <div class="col-md-12 col-sm-12 col-lg-12">
         <label for="tableNumber">{{tableNumber}}:</label>
         <label id="tableNumber" mdbActive> {{ selectedTable.number }}</label>
       </div>
-    </div>
-    <div class="row" id="secondRow">
-      <div class="col-md-12 col-lg-12 col-sm-12">
-        <mdb-completer (selected)="selectWaiter()" [label]="'Seleccionar Mozo'" name="autocomplete" [(ngModel)]="selectedWaiter" [datasource]="waitersList" [minSearchLength]="0"></mdb-completer> 
-      </div>  
     </div>
     <div class="row" id="secondRow">
       <div class="col-md-12 col-lg-12 col-sm-12">
@@ -26,7 +21,7 @@
   <div class="row customFooterModal">
     <div class="customOrderButtons">
       <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModal()">{{cancelButton}}</button>
-      <button type="button" class="btn btn-primary btn-sm waves-light" (click)="newOrder()">{{confirmButton}}</button>
+      <button #okButton type="button" class="btn btn-primary btn-sm waves-light" (click)="newOrder()">{{confirmButton}}</button>
     </div>
   </div>
 </div>
