--- a/src/styles.scss
+++ b/src/styles.scss
@@ -370,6 +370,16 @@ width: 100%!important;
     background-color: #eeeeee;
 }
 
+.customFooterButtons {
+  width: 100%;
+  text-align: center;
+}
+
+.customModalContent {
+  width: 100%;
+  text-align: center;
+}
+
 .modalContent {
     padding-left: 1rem;
     padding-right: 1rem;
