--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -1,5 +1,5 @@
-<ng-template #openNewOrderTemplate>
-  <app-order-pre [selectedTable]="selectedTable" (close)="closeModal()"></app-order-pre>
+<ng-template #askPinTemplate>
+  <app-pin-authenticate (close)="closeModal()"></app-pin-authenticate>
 </ng-template>
 
 <ng-template #errorTemplate>
